@@ -17,6 +17,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #15882: Change _decimal to accept any coefficient tuple when
+  constructing infinities. This is done for backwards compatibility
+  with decimal.py: Infinity coefficients are undefined in _decimal
+  (in accordance with the specification).
 
 What's New in Python 3.3.0 Release Candidate 2?
 ===============================================
